--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-python-telegram-bot[job-queue]==20.6
-requests
-python-dotenv
-aiohttp
-beautifulsoup4
+python-telegram-bot==20.6
+httpx==0.27.0
+apscheduler==3.10.4
