--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,11 @@
 services:
-  - type: worker
-    name: telegram-bot-worker
+  - type: web
+    name: bigpump-bot
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "./start.sh"
     plan: free
+    buildCommand: ""
+    startCommand: ./start.sh
+    autoDeploy: true
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.8
