--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,8 @@ services:
   - type: web
     name: bigpump-bot
     env: python
-    plan: free
     buildCommand: ""
-    startCommand: ./start.sh
-    autoDeploy: true
+    startCommand: bash start.sh
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.8
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
